# Gravimetric-Shots

./: .gitignore  ACAIA_BLE_PROTOCOL_RESEARCH.md  ACKNOWLEDGMENTS.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPARISON.md  NIMBLE_VS_ARDUINOBLE_POSTMORTEM.md  README.md  RECONNECTION_FIX.md  claude.md  platformio.ini  test_serial.ino
archive/: FUTURE_IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  TESTING_CHECKLIST.md
examples/lvgl_demo/: gravimetric.ino
lib/: lv_conf.h
lib/AcaiaArduinoBLE/: AcaiaArduinoBLE.cpp  AcaiaArduinoBLE.cpp.arduinoble.bak  AcaiaArduinoBLE.cpp.bak  AcaiaArduinoBLE.h  CUSTOM_MODIFICATIONS.md  library.properties
lib/ArduinoBLE/src/utility/: HCIVirtualTransport.cpp
lib/lvgl/src/core/: lv_obj.c
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.h
lib/ui/src/images/: ui_img_arrow_png.c  ui_img_bluetooth_png.c  ui_img_cancel_png.c  ui_img_coffee_png.c  ui_img_config_png.c  ui_img_flush_png.c  ui_img_refresh_png.c
lib/ui/src/screens/: ui_MainScreen.c  ui_SettingScreen.c
src/: AXS15231B.cpp  AXS15231B.h  GravimetricShots.ino  debug_config.cpp  debug_config.h  gravimetric.ino.backup  pins_config.h
